# TML

./: README.md
auto_gen/: Cargo.toml
auto_gen/src/: main.rs
coursework/: app.py  coursework.tex
lab1/: lab1.ipynb
lab2/: lab2.ipynb
lab3/: lab3.ipynb
lab4/: lab4.ipynb
lab5/: lab5.ipynb
lab6/: lab6.py
rk1/: rk1.ipynb  rk1.tex
rk2/: rk2.ipynb  rk2.tex
