[package]
name = "auto_gen"
version = "0.1.0"
authors = ["Egor Sysoykin <egor.sysoykin@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fake = { version = "2.4", features=['derive', 'chrono']}
fake = { path = "../fake-rs/fake", features=['derive']}
dummy = { path = "../fake-rs/dummy_derive" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
